# aoc-rust

./: .gitignore  Cargo.toml
src/: dir.rs  dsa.rs  lib.rs  main.rs  map2d.rs  parsing.rs  vec2.rs  vector.rs
src/sol2024/: day_03.rs  day_06.rs  day_08.rs  day_10.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_18.rs  day_20.rs  day_21.rs  day_24.rs  day_25.rs  mod.rs
src/sol2025/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  mod.rs
