[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
bit-vec = "0.*"
clap = { version = "4.5.*", features = ["derive"] }
dhat = { version = "0.3.*", optional = true }
indoc = "2.0.*"
itertools = "0.*"
nom = "8"
rayon = "1.*"
rustc-hash = "2.*"
num-traits = "0.*"

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
